# libpear

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
.github/workflows/: prebuild.yml  test.yml
include/: pear.h
src/: pear.c
test/: CMakeLists.txt  keet.c
